# src/routes/auth.ts
@@ -5,5 +5,6 @@ const router = express.Router();
 
 router.post('/signup', authController.signUp)
 router.post('/login', authController.login)
+router.post('/otp/verify', authController.otp_verification)
 
 export let authRouter = router;
